app config pojos